# binny

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/commands/: review-materials.md  review-prefixes.md
binny/: __init__.py  cli_tools.py  main.py  part_namer_tools.py
binny/part_namer/: README.md  __init__.py  models.py  tools.py
binny/part_namer_mcp/: README.md  __init__.py  approval_workflow.py  file_manager.py  models.py
binny/system_prompts/: binny_prompt.md  edit_assistant_prompt.md  inventory_manager_prompt.md  part_namer_prompt.md
binny/tui/: app.py  chat_view.py  edit_proposal_modal.py  proposal_modal.py
binny/tui/styles/: app.tcss  chat_view.tcss  edit_proposal_modal.tcss  proposal_modal.tcss
system_prompts/: binny_prompt.md  mmc_searcher_prompt.md  part_namer_prompt.md
